change pass to key

--- a/src/app/.github/workflows/deploy.yml
+++ b/src/app/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           host: 13.49.225.189
           username: ubuntu
-          password: ${{ secrets.PRIVATE_SSH_KEY }}
+          key: ${{ secrets.PRIVATE_SSH_KEY }}
           port: 22
           script: whoami
             
