--- a/src/app/.github/workflows/deploy.yml
+++ b/src/app/.github/workflows/deploy.yml
@@ -20,7 +20,8 @@ jobs:
           username: ubuntu
           key: ${{ secrets.PRIVATE_SSH_KEY }}
           port: 22
-          script: whoami
+          script: |
+            ls
             
       
        
