--- a/src/app/.github/workflows/deploy.yml
+++ b/src/app/.github/workflows/deploy.yml
@@ -21,7 +21,11 @@ jobs:
           key: ${{ secrets.PRIVATE_SSH_KEY }}
           port: 22
           script: |
-            ls
+            cd 100xdevs-ci-cd
+            git pull
+            npm install
+            npm run build
+            npm run start
             
       
        
